<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>

    <string name="app_name">מתכונים</string>


    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>

    <string name="מתכונים">מתכונים</string>
    <string name="overllTimeText">זמן הכנה כולל</string>
    <string name="prepTime">זמן הכנה</string>
    <string name="cookTime">זמן בישול</string>
    <string name="ingredients">מצרכים</string>
    <string name="directions">שלבי הכנה</string>
    <string name="basket">&#xf291;</string>
    <string name="file">&#xf0f6;</string>
    <string name="info">&#xf129;</string>
    <string name="recipes">&#xf0f5;</string>
    <string name="favorites">&#xf004;</string>
    <string name="categories">&#xf0ca;</string>
    <string name="categoriesText">קטגוריות</string>
    <string name="favoritesText">מועדפים</string>
    <string name="aboutText">אודות</string>
    <string name="recipeText">מתכונים</string>


</resources>
