<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:background="#ffffff">

    <ListView
        android:id="@+id/listview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:layout_above="@+id/optionsIcons" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="#E9E7E2"
        android:id="@+id/optionsIcons"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iconCategories"
            android:layout_weight="1"
            android:gravity="center"
            android:typeface="normal"
            android:textSize="21sp"
            android:paddingTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iconFavorites"
            android:layout_weight="1"
            android:gravity="center"
            android:typeface="normal"
            android:textSize="21sp"
            android:paddingTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iconRecipes"
            android:layout_weight="1"
            android:gravity="center"
            android:typeface="normal"
            android:textSize="21sp"
            android:paddingTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iconAbout"
            android:layout_weight="1"
            android:gravity="center"
            android:typeface="normal"
            android:textSize="25sp"
            android:paddingTop="4dp" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:background="#E9E7E2"
        android:id="@+id/optionsTexts"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textCategories"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/categoriesText"
            android:layout_marginTop="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textFavorites"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/favoritesText"
            android:layout_marginTop="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textRecipes"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/recipeText"
            android:layout_marginTop="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textAbout"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/aboutText"
            android:layout_marginTop="2dp" />

    </LinearLayout>

</RelativeLayout>
