<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#F9F3F5"
        android:alpha="0.932"
        android:gravity="top">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="245dp"
            android:id="@+id/levellabel"
            android:layout_gravity="right|top"
            android:layout_marginTop="20dp"
            android:layout_marginRight="12dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/chef"
            android:adjustViewBounds="true"
            android:maxWidth="26dp"
            android:maxHeight="16dp"
            android:scaleType="fitCenter"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/level"
            android:layout_toLeftOf="@+id/levellabel"
            android:layout_gravity="bottom"
            android:layout_marginRight="10dp"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="4dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="245dp"
            android:id="@+id/typelabel"
            android:layout_gravity="right|top"
            android:layout_marginTop="20dp"
            android:layout_marginRight="75dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/cheese"
            android:adjustViewBounds="true"
            android:maxWidth="26dp"
            android:maxHeight="16dp"
            android:scaleType="fitCenter"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/type"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/typelabel"
            android:layout_marginRight="10dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="4dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="245dp"
            android:id="@+id/overallTimelabel"
            android:layout_gravity="right|top"
            android:layout_marginTop="20dp"
            android:layout_marginRight="158dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/timer"
            android:adjustViewBounds="true"
            android:maxWidth="26dp"
            android:maxHeight="16dp"
            android:scaleType="fitCenter"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/overallTime"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/overallTimelabel"
            android:layout_marginRight="10dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="4dp"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/title"
            android:layout_marginRight="12dp"
            android:layout_alignParentRight="true"/>



    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="217dp"
        android:id="@+id/image"
        android:layout_gravity="center_vertical"
        android:layout_alignParentRight="true"
        android:layout_marginTop="45dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_below="@+id/image"
        android:layout_alignParentRight="true">

        <TextView
            android:id="@+id/timerFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#F59012"
            android:layout_alignParentRight="true"
            android:layout_marginRight="18dp"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/overallTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overllTimeText"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/prepTime"
            android:id="@+id/prepTime"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/overallTimeText"
            android:layout_alignEnd="@+id/overallTimeText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/numberPrepTime"
            android:layout_below="@+id/prepTime"
            android:layout_alignRight="@+id/prepTime"
            android:layout_alignEnd="@+id/prepTime" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/cookTime"
            android:id="@+id/cookTime"
            android:layout_below="@+id/overallTimeText"
            android:layout_toLeftOf="@+id/overallTimeText"
            android:layout_toStartOf="@+id/overallTimeText"
            android:layout_marginRight="60dp"
            android:layout_marginEnd="55dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/numberCookTime"
            android:layout_below="@+id/cookTime"
            android:layout_alignRight="@+id/cookTime"
            android:layout_alignEnd="@+id/cookTime" />
    </RelativeLayout>

</RelativeLayout>
